# codelytics

./: .pre-commit-config.yaml  CITATION.cff  README.md  play.ipynb  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
src/codelockholmes/: __init__.py
src/codelytics/: __init__.py  comments.py  dir.py  docstrings.py  helpers.py  names.py  notebook.py  pdf.py  py.py  text_analysis.py
tests/: test_dir.py  test_names.py  test_notebook.py  test_pdf.py  test_py.py  test_text_analysis.py
tests/data/project01/: README.md  counting.py  file01.py  invalid-syntax.py  notebook01.ipynb  simple.py
tests/data/project01/dir01/: halstead.py  imports.py  mccabe.py  user-defined-names.py
tests/data/project01/dir01/invalid-syntax/: invalid-notebook.ipynb  invalid-syntax.txt
tests/data/project01/dir1/: cognitive-complexity.py  file02.py  file03.py  file04.py  file05.py  file06.py  file07.py  file08.py  file09.py
